--- a/Proyecto/Arbol Infinito JS/estilos/css/estilos.css
+++ b/Proyecto/Arbol Infinito JS/estilos/css/estilos.css
@@ -22,6 +22,7 @@ body{
 	height:90%;
 	margin:2.5%;
 	background-color:red;
+	padding:2.5%;
 }
 
 .columna-middle{
@@ -31,4 +32,14 @@ body{
 	height:90%;
 	background-color:green;
 	margin:2.5%;
+}
+
+.formControl{
+	position:relative;
+	width:70%;
+	margin:2.5%;
+}
+
+#terminal{
+	display:none;
 }
